@@ -1,3 +1,3 @@
 # Target: Embedded Intel 386 
 TDEPFILES= i386-tdep.o i387-tdep.o
-TM_FILE= tm-i386v.h
+TM_FILE= tm-embed.h
